--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pyfhel = "^3.4.1"
-numpy = "^1.24.3"
+# pyfhel = "^3.4.1"
+# numpy = "^1.24.3"
 
 
 [build-system]
